--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+    
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/amatsegora1/qa_automation_alex/issues"
   },
-  "homepage": "https://github.com/amatsegora1/qa_automation_alex#readme"
+  "homepage": "https://github.com/amatsegora1/qa_automation_alex#readme",
+  "dependencies": {
+    "axios": "^1.9.0",
+    "jest": "^29.7.0"
+  }
 }
